# Real-Time-Water-Quality-Monitoring-Using-Raspberry-Pi-5-based-on-Embedded-System-Framework

./: CMakeLists.txt  README.en.md  README.md  Test  ds18b20.c  ds18b20.h  main.c  test
QtServer/: CMakeList  CMakeLists.txt  Mainwindow.cpp  Mainwindow.h  QtServer.pro.user.e7843fd  README.MD  README.md  TcpServer.cpp  TcpServer.h  icons  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc
QtServer/QtServer/: QtServer.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
Raspberrry Pi/: CMakeList  CMakeLists .txt  CMakeLists.txt  main.cpp  pcf8591.cpp  sock.h
Raspberrry Pi/app/: app.h
Raspberrry Pi/common/: constants.h  water_quality.h
Raspberrry Pi/data_collection/: data_collector.cpp  ds18b20.h  pcf8591.cpp  pcf8591.h
Raspberrry Pi/display/: tft_freetype.h
Raspberrry Pi/src/app/: app.cpp  app.h
Raspberrry Pi/src/common/: com.h  constants.h  water_quality.cpp  water_quality.h
Raspberrry Pi/src/data_collection/: data_collector.cpp  data_collector.h  ds18b20.cpp  pcf8591.cpp  pcf8591.h
Raspberrry Pi/src/display/: tft_freetype.cpp  tft_freetype.h
Raspberrry Pi/src/event_loop/: event_loop.cpp  event_loop.h
Raspberrry Pi/src/info_updating/: debug_info_updater.cpp  debug_info_updater.h  info_updater.h  socket_info_updater.cpp  socket_info_updater.h  tft_info_updater.cpp  tft_info_updater.h
Raspberrry Pi/src/networking/: sock.cpp  sock.h
Raspberrry Pi/test/: main_test.cpp
raspberryPi/: README.md  cJSON.c  com.h  ds18b20.c  ds18b20.cpp  ds18b20.h  main.c  main.cpp  pcf8591.c  pcf8591.cpp  pcf8591.h  sock.c  sock.cpp  sock.h  tft_freetype.c  tft_freetype.cpp  tft_freetype.h  thread.c  thread.cpp  thread.h
raspberryPi/test/: main_test.cpp
test/: main_test.cpp
